<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    tools:context=".ui.auth.login.LoginFragment">

    <TextView
        android:id="@+id/signTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_txt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/lWlcmTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_wlcm_txt"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:textSize="16sp"
        android:lineSpacingExtra="3dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signTxt"/>

    <TextView
        android:id="@+id/mailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_txt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lWlcmTxt"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_e_mail"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
         android:backgroundTint="@color/textColor"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:autofillHints="false"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="17dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailTxt"
        />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEt"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/textColor"
        android:textSize="16sp"
        android:autofillHints="false"
        android:inputType="textPassword"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="17dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTxt"/>

    <TextView
        android:id="@+id/forgotPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/passwordEt"
        app:layout_constraintTop_toBottomOf="@id/passwordEt"/>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sign_in"
        android:padding="15dp"
        android:backgroundTint="@color/btn_color"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="@id/passwordEt"
        app:layout_constraintEnd_toEndOf="@id/passwordEt"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTxt" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_account_txt"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/signInBtn"
        app:layout_constraintEnd_toEndOf="@id/signInBtn"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>